# xray-ng

./: .clang-format  .clang_complete  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  TODO  flake.nix  launch_qtcreator.bat  launch_qtcreator.sh  launch_sublime.bat  launch_sublime.sh  logic_subroutines.txt  mingw-w64-x86_64.cmake  prep_env.bat  prep_env.msvc.bat  prep_env.sh  prep_env_msvc.bat  shell.nix  xray-ng.sublime-project
src/samples/: CMakeLists.txt
src/samples/basic_gl/: #demo_base.cc#  CMakeLists.txt  animated_plane.cc  animated_plane.hpp  animated_plane_model.hpp  basic_scene.hpp  colored_circle.cc  colored_circle.hpp  debug_record.cc  debug_record.hpp  demo_base.cc  demo_base.hpp  fractal.cc  fractal.hpp  fwd_app.hpp  helpers.hpp  init_context.hpp  light_source.hpp  lit_torus.cc  lit_torus.hpp  main.cc  material.cc  material.hpp  mesh_lister.cc  mesh_lister.hpp  mtl_component_type.cc  mtl_component_type.hpp  phong_material_component.cc  phong_material_component.hpp  resize_context.hpp  scene_loader.cc  scene_loader.hpp  std_assets.hpp  subroutine_test.cc  subroutine_test.hpp
src/samples/basic_gl/cap2/colored_circle/: colored_circle_demo.cc  colored_circle_demo.hpp
src/samples/basic_gl/cap3/frag_discard/: frag_discard_demo.cc  frag_discard_demo.hpp
src/samples/basic_gl/cap3/soubroutines/: soubroutines_demo.cc  soubroutines_demo.hpp
src/samples/basic_gl/cap4/directional_lights/: directional_lights_demo.cc  directional_lights_demo.hpp
src/samples/basic_gl/cap4/fog/: fog_demo.cc  fog_demo.hpp
src/samples/basic_gl/cap4/multiple_lights/: multiple_lights_demo.cc  multiple_lights_demo.hpp
src/samples/basic_gl/cap4/per_fragment_lighting/: per_fragment_lighting_demo.cc  per_fragment_lighting_demo.hpp
src/samples/basic_gl/cap4/spotlight/: spotlight_demo.cc  (+1 more)
src/samples/basic_gl/config/: app_config.conf  cam_controller_spherical.conf  logging.conf
src/samples/basic_gl/lighting/: directional_light_demo.cc  directional_light_demo.hpp  point_light_demo.cc  point_light_demo.hpp
src/samples/basic_gl/shaders/: ads_lighting.vert  basic_coloring.glsl  diffuse_light.glsl  fractal_frag.glsl  fractal_passthrough.glsl  passthrough.glsl  passthrough_frag.glsl  phong_lighting.glsl  test_fragshader.glsl  test_vshader.glsl  vertex_coloring.glsl  vertex_coloring.vert
src/samples/common_core/: CMakeLists.txt
src/samples/common_core/include/: demo_base.hpp  init_context.hpp
src/samples/directx10/: CMakeLists.txt  basic_window.cc  basic_window.hpp  fragment_shader.hpp  gpu_buffer.cc  gpu_buffer.hpp  gpu_shader.hpp  gpu_shader_common_core.cc  gpu_shader_common_core.hpp  gpu_shader_traits.hpp  main.cc  rasterizer_state.cc  rasterizer_state.hpp  renderer_dx10.cc  renderer_dx10.hpp  scoped_resource_mapping.cc  scoped_resource_mapping.hpp  simple_object.cc  simple_object.hpp  vertex_layout_decl.hpp  vertex_shader.hpp
src/samples/directx10/config/: cam_controller_spherical.conf
src/samples/directx10/shaders/: diffuse_lighting.hlsl  fs_passthrough.hlsl  vertex_pc.hlsl  vs_passthrough.hlsl
src/samples/directx11/: CMakeLists.txt  main.cc
src/samples/directx11/cap1/: test_object.cc  test_object.hpp
src/samples/directx11/config/: app_config.conf  cam_controller_spherical.conf
src/samples/test_app/: CMakeLists.txt  main.cc  tests.cc
src/samples/vulkan/: CMakeLists.txt
src/samples/vulkan/code/: bindless.pipeline.config.hpp  build-info-tool.cc  events.hpp  push.constant.packer.hpp  system.memory.cc  system.memory.hpp  system.physics.cc  system.physics.debug.renderer.cc  system.physics.debug.renderer.hpp  system.physics.hpp  vulkan-main.cc
src/samples/vulkan/config/: app_config.conf  renderer.conf  vk_layer_settings.txt
src/tools/colorgen/: CMakeLists.txt  color_palettes.hpp  colorgen.py  flat.hpp  main.cc  material.hpp
src/tools/colorgen/colordefs/: output_templ_cc_file  output_template_file
src/tools/enum_gen/: CMakeLists.txt  enum.cc.template  enum.hpp.template  main.cc
src/tools/enum_gen/enumdefs/: graphicsstage.enum  key_symbols.enum  mtl_types.enum  render_stage.enum
src/tools/fontgen/: CMakeLists.txt  main.cc
src/tools/mesh_tool/: CMakeLists.txt  mesh_tool.cc
src/xray/base/: CMakeLists.txt  app_config.cc  config_settings.cc  debug_output.cc  file_system_watcher.cc  logger.cc  perf_stats_collector.cc  xray.misc.cc
src/xray/base/dbg/: debug_ext.cc
src/xray/math/: CMakeLists.txt
src/xray/physics/: CMakeLists.txt  particle.cc
src/xray/rendering/: CMakeLists.txt  debug_draw.cc  geometry.importer.gltf.cc  mesh.cc  mesh_loader.cc  procedural.cc  procedural.hpp  render_stage.cc  shader.code.builder.cc  texture_loader.cc
src/xray/rendering/colors/: color_cast_rgb_hsl.cc  color_cast_rgb_hsv.cc  color_cast_rgb_xyz.cc  color_palettes.cc  rgb_color.cc
src/xray/rendering/directx/: CMakeLists.txt  DDSTextureLoader.cpp  WICTextureLoader.cpp  dx11_renderer.cc  gpu_shader.cc  gpu_shader_base.cc  scoped_mapping.cc  scoped_state.cc
src/xray/rendering/geometry/: aabb_visualizer.cc  geometry_factory.cc  heightmap.generator.cc  surface_normal_visualizer.cc
src/xray/rendering/opengl/: CMakeLists.txt  gl_handles.cc  gpu_program.cc  program_pipeline.cc  scoped_resource_mapping.cc  shader_base.cc
src/xray/rendering/renderer.vulkan/: renderer.vulkan.cc
src/xray/rendering/vulkan.renderer/: vulkan.async.tasks.cc  vulkan.bindless.cc  vulkan.buffer.cc  vulkan.error.cc  vulkan.image.cc  vulkan.pipeline.builder.cc  vulkan.pipeline.cc  vulkan.queue.submit.token.cc  vulkan.renderer.cc  vulkan.renderer.config.cc
src/xray/scene/: CMakeLists.txt  camera.cc  camera.controller.arcball.cc  camera.controller.flight.cc  camera_controller.cc  camera_controller_spherical_coords.cc  config_reader_scene.cc  fps_camera_controller.cc  scene.definition.cc  scene.description.cc
src/xray/ui/: CMakeLists.txt  app_window.cc  basic_gl_window.cc  events.pretty.print.cc  key_sym.cc  key_symbols_win.cc  key_symbols_x11.cc  ui.cc  user.interface.backend.vulkan.cc  user_interface.cc  user_interface_backend_opengl.cc  window_win32.cc  window_x11.cc
(+397 files in other folders)
