if (XRAY_USE_DIRECTX10)
    message("Building DirectX10 samples")
    add_subdirectory(directx10)
elseif(XRAY_USE_DIRECTX11)
    message("Building DirectX11 samples")
    add_subdirectory(directx11)
else()
    message("Building OpenGL samples")
    add_subdirectory(basic_gl)
    # add_subdirectory(test_app)
endif()
